--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <head>
-
+    <title>First step html</title>
 </head>
 
 <body>
-    
+    <h1>Sample</h1>
+    <p>HTML</p>
+
+    <span>
+        <h1>Hello</h1>
+        <p>Spring</p>
+    </span>
+
+    <span>Hello</span>
+    <span>Spring</span>
 </body>
+</html>
