--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -14,5 +14,15 @@
 
     <span>Hello</span>
     <span>Spring</span>
+
+    <img src="image/java.png" alt="java"  width="500" height="200">
+
+    <table border="solid" width="300">
+        <tr>
+            <th>Java</th>
+            <th>Programming</th>
+            <th>Language</th>
+        </tr>   
+
 </body>
 </html>
