--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -22,7 +22,27 @@
             <th>Java</th>
             <th>Programming</th>
             <th>Language</th>
-        </tr>   
+        </tr> 
+        <tr>
+            <td>Petar</td>
+            <td>Matić</td>
+        </tr>
+
+        <ol>
+            <li>Pancakes: $2.99</li>
+            <li>Eggs: $3.29</li>
+            <li>Bacon: $4.99</li>
+        </ol>        
+        
+        <form>
+            <input type="text" placeholder="First Name">
+            <input type="text" placeholder="Last Name">
+            <p> Date of Birth </p>
+            <input type="date"><br><br>
+            <input type="submit" value="Submit">
+        </form> 
+    
+   
 
 </body>
 </html>
