--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>First step html</title>
+    <title>HTML 1</title>
+    <link rel="stylesheet" type="text/css" href="css">
 </head>
 
 <body>
@@ -15,14 +18,14 @@
     <span>Hello</span>
     <span>Spring</span>
 
-    <img src="image/java.png" alt="java"  width="500" height="200">
+    <img src="image/java.png" alt="java" width="500" height="200">
 
     <table border="solid" width="300">
         <tr>
             <th>Java</th>
             <th>Programming</th>
             <th>Language</th>
-        </tr> 
+        </tr>
         <tr>
             <td>Petar</td>
             <td>Matić</td>
@@ -32,17 +35,14 @@
             <li>Pancakes: $2.99</li>
             <li>Eggs: $3.29</li>
             <li>Bacon: $4.99</li>
-        </ol>        
-        
+        </ol>
+
         <form>
             <input type="text" placeholder="First Name">
             <input type="text" placeholder="Last Name">
-            <p> Date of Birth </p>
+            <p>Date of Birth</p>
             <input type="date"><br><br>
             <input type="submit" value="Submit">
-        </form> 
-    
-   
-
-</body>
+        </form>
+    </body>
 </html>
