--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -13,6 +13,8 @@
     <span>
         <h1>Hello</h1>
         <p>Spring</p>
+        <h2>Java</h2>
+        <h3>Programming</h3>
     </span>
 
     <span>Hello</span>
