--- a/Frontend/Html_1.html
+++ b/Frontend/Html_1.html
@@ -46,5 +46,7 @@
             <input type="date"><br><br>
             <input type="submit" value="Submit">
         </form>
+
+    <a href="https://www.java.com/en/">Java Oracle page</a>
     </body>
 </html>
